--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body{
 }
 
 .blog img{
-    @apply max-w-[500px] rounded-2xl py-6;
+    @apply max-w-[250px] md:max-w-[500px] rounded-2xl py-6;
 }
 .blog h2{
    @apply text-2xl underline;
